--- a/sell/src/main/res/layout/dialog_view.xml
+++ b/sell/src/main/res/layout/dialog_view.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tv_regime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/size_24dp"
+        android:layout_marginStart="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/size_24dp"
         android:textColor="@color/black"
         android:textSize="@dimen/text_20sp"
@@ -23,24 +23,29 @@
         android:id="@+id/tv_regime_message"
         android:layout_width="@dimen/margin_0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/size_24dp"
+        android:layout_marginStart="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_12dp"
-        android:layout_marginEnd="@dimen/size_24dp"
+        android:layout_marginEnd="@dimen/margin_16dp"
         android:textSize="@dimen/text_16sp"
+        android:textAlignment="viewStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_regime"
         tools:text="Это основной режим осуществления торговой деятельности. Все данные отправляются в ОФД." />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/tv_regime_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/size_60dp"
-        android:layout_marginEnd="@dimen/margin_36dp"
+        android:layout_marginTop="@dimen/size_40dp"
+        android:layout_marginEnd="@dimen/margin_16dp"
         android:layout_marginBottom="@dimen/margin_16dp"
+        android:background="@android:color/transparent"
+        android:clickable="true"
+        android:focusable="true"
         android:text="@android:string/ok"
         android:textColor="@color/clickBlue"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_regime_message" />
