--- a/sell/src/main/res/layout/side_menu_other_operations.xml
+++ b/sell/src/main/res/layout/side_menu_other_operations.xml
@@ -1,139 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clickable="false"
-    android:focusable="false"
-    android:orientation="vertical"
-    android:padding="@dimen/margin_16dp">
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            android:focusable="false"
+            android:orientation="vertical"
+            android:background="@color/black"
+            android:padding="@dimen/margin_16dp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        android:text="@string/text_purchase"
-        android:textColor="@color/textWhite"
-        android:textSize="@dimen/text_16sp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                android:text="@string/text_purchase"
+                android:textColor="@color/textWhite"
+                android:textSize="@dimen/text_16sp" />
 
-    <kg.nurtelecom.ofd.cell.CellView
-        android:id="@+id/btn_menu_item_purchase"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        app:showArrowIcon="true"
-        app:title="@string/text_purchase" />
+            <kg.nurtelecom.ofd.cell.CellView
+                android:id="@+id/btn_menu_item_purchase"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                app:showArrowIcon="true"
+                app:title="@string/text_purchase" />
 
-    <kg.nurtelecom.ofd.cell.CellView
-        android:id="@+id/btn_menu_item_return_purchase"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        app:showArrowIcon="true"
-        app:title="@string/text_return_purchase" />
+            <kg.nurtelecom.ofd.cell.CellView
+                android:id="@+id/btn_menu_item_return_purchase"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                app:showArrowIcon="true"
+                app:title="@string/text_return_purchase" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        android:text="@string/text_prepayment"
-        android:textColor="@color/textWhite"
-        android:textSize="@dimen/text_16sp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                android:text="@string/text_prepayment"
+                android:textColor="@color/textWhite"
+                android:textSize="@dimen/text_16sp" />
 
-    <kg.nurtelecom.ofd.cell.CellView
-        android:id="@+id/btn_menu_item_refund_prepayment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        app:showArrowIcon="true"
-        app:title="@string/text_refund_prepayment" />
+            <kg.nurtelecom.ofd.cell.CellView
+                android:id="@+id/btn_menu_item_refund_prepayment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                app:showArrowIcon="true"
+                app:title="@string/text_refund_prepayment" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        android:text="@string/text_credit"
-        android:textColor="@color/textWhite"
-        android:textSize="@dimen/text_16sp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                android:text="@string/text_credit"
+                android:textColor="@color/textWhite"
+                android:textSize="@dimen/text_16sp" />
 
-    <kg.nurtelecom.ofd.cell.CellView
-        android:id="@+id/btn_menu_item_credit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        app:showArrowIcon="true"
-        app:title="@string/text_credit" />
+            <kg.nurtelecom.ofd.cell.CellView
+                android:id="@+id/btn_menu_item_credit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                app:showArrowIcon="true"
+                app:title="@string/text_credit" />
 
-    <kg.nurtelecom.ofd.cell.CellView
-        android:id="@+id/btn_menu_item_close_credit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        app:showArrowIcon="true"
-        app:title="@string/text_close_credit" />
+            <kg.nurtelecom.ofd.cell.CellView
+                android:id="@+id/btn_menu_item_close_credit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                app:showArrowIcon="true"
+                app:title="@string/text_close_credit" />
 
-    <kg.nurtelecom.ofd.cell.CellView
-        android:id="@+id/btn_menu_item_repayment_credit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        app:showArrowIcon="true"
-        app:title="@string/text_repayment_credit" />
+            <kg.nurtelecom.ofd.cell.CellView
+                android:id="@+id/btn_menu_item_repayment_credit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                app:showArrowIcon="true"
+                app:title="@string/text_repayment_credit" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        android:text="@string/text_deposit_and_payment_cashbox"
-        android:textColor="@color/textWhite"
-        android:textSize="@dimen/text_16sp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                android:text="@string/text_deposit_and_payment_cashbox"
+                android:textColor="@color/textWhite"
+                android:textSize="@dimen/text_16sp" />
 
-    <kg.nurtelecom.ofd.cell.CellView
-        android:id="@+id/btn_menu_item_deposit_and_payment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        app:showArrowIcon="true"
-        app:subTitle="@string/text_change_cashbox"
-        app:title="@string/text_deposit_and_payment" />
+            <kg.nurtelecom.ofd.cell.CellView
+                android:id="@+id/btn_menu_item_deposit_and_payment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                app:showArrowIcon="true"
+                app:subTitle="@string/text_change_cashbox"
+                app:title="@string/text_deposit_and_payment" />
 
-    <kg.nurtelecom.ofd.cell.CellView
-        android:id="@+id/btn_menu_item_history_deposits_payments"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        app:showArrowIcon="true"
-        app:title="@string/text_history_deposits_payments" />
+            <kg.nurtelecom.ofd.cell.CellView
+                android:id="@+id/btn_menu_item_history_deposits_payments"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                app:showArrowIcon="true"
+                app:title="@string/text_history_deposits_payments" />
 
-    <kg.nurtelecom.ofd.cell.CellView
-        android:id="@+id/btn_menu_item_fiscal_report"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginTop="@dimen/margin_8dp"
-        android:layout_marginRight="@dimen/margin_16dp"
-        app:showArrowIcon="true"
-        app:subTitle="@string/text_period_report"
-        app:title="@string/text_fiscal_report" />
+            <kg.nurtelecom.ofd.cell.CellView
+                android:id="@+id/btn_menu_item_fiscal_report"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_8dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                app:showArrowIcon="true"
+                app:subTitle="@string/text_period_report"
+                app:title="@string/text_fiscal_report" />
 
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
