--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="text_16sp">16sp</dimen>
     <dimen name="text_14sp">14sp</dimen>
 
+    <dimen name="margin_50dp">50dp</dimen>
     <dimen name="margin_46dp">46dp</dimen>
     <dimen name="margin_44dp">44dp</dimen>
     <dimen name="margin_36dp">36dp</dimen>
