--- a/sell/src/main/res/layout/other_operations_fragment.xml
+++ b/sell/src/main/res/layout/other_operations_fragment.xml
@@ -55,11 +55,20 @@
                 android:textSize="@dimen/text_16sp" />
 
             <kg.nurtelecom.ofd.cell.CellView
-                android:id="@+id/btn_menu_item_refund_prepayment"
+                android:id="@+id/btn_menu_item_prepayment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_16dp"
+                android:layout_marginRight="@dimen/margin_16dp"
+                app:showArrowIcon="true"
+                app:title="@string/text_prepayment" />
+
+            <kg.nurtelecom.ofd.cell.CellView
+                android:id="@+id/btn_menu_item_refund_prepayment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginRight="@dimen/margin_16dp"
                 app:showArrowIcon="true"
                 app:title="@string/text_refund_prepayment" />
