--- a/user/src/main/res/layout/fragment_create_new_password.xml
+++ b/user/src/main/res/layout/fragment_create_new_password.xml
@@ -4,8 +4,6 @@
     android:layout_height="match_parent"
     android:background="@color/black">
 
-
-
     <kg.nurtelecom.ofd.edittext.EditTextField
         android:id="@+id/et_new_password"
         android:layout_width="match_parent"
@@ -48,6 +46,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="@dimen/margin_16dp"
         android:text="Далее"/>
 
 
