--- a/user/src/main/res/layout/fragment_current_password.xml
+++ b/user/src/main/res/layout/fragment_current_password.xml
@@ -26,6 +26,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_16dp"
         android:text="Далее"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
