--- a/sell/src/main/res/layout/other_operations_fragment.xml
+++ b/sell/src/main/res/layout/other_operations_fragment.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="fill_parent">
+
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:ignore="UselessParent">
+
         <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/black"
             android:clickable="false"
             android:focusable="false"
             android:orientation="vertical"
-            android:background="@color/black"
             android:padding="@dimen/margin_16dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 android:text="@string/text_purchase"
                 android:textColor="@color/textWhite"
                 android:textSize="@dimen/text_16sp" />
@@ -29,9 +30,7 @@
                 android:id="@+id/btn_menu_item_purchase"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 app:showArrowIcon="true"
                 app:title="@string/text_purchase" />
 
@@ -39,17 +38,13 @@
                 android:id="@+id/btn_menu_item_return_purchase"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 app:showArrowIcon="true"
                 app:title="@string/text_return_purchase" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 android:text="@string/text_prepayment"
                 android:textColor="@color/textWhite"
                 android:textSize="@dimen/text_16sp" />
@@ -58,9 +53,7 @@
                 android:id="@+id/btn_menu_item_prepayment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 app:showArrowIcon="true"
                 app:title="@string/text_prepayment" />
 
@@ -68,17 +61,13 @@
                 android:id="@+id/btn_menu_item_refund_prepayment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 app:showArrowIcon="true"
                 app:title="@string/text_refund_prepayment" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 android:text="@string/text_credit"
                 android:textColor="@color/textWhite"
                 android:textSize="@dimen/text_16sp" />
@@ -87,9 +76,7 @@
                 android:id="@+id/btn_menu_item_credit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 app:showArrowIcon="true"
                 app:title="@string/text_credit" />
 
@@ -97,8 +84,6 @@
                 android:id="@+id/btn_menu_item_close_credit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 app:showArrowIcon="true"
                 app:title="@string/text_close_credit" />
 
@@ -106,17 +91,13 @@
                 android:id="@+id/btn_menu_item_repayment_credit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 app:showArrowIcon="true"
                 app:title="@string/text_repayment_credit" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 android:text="@string/text_deposit_and_payment_cashbox"
                 android:textColor="@color/textWhite"
                 android:textSize="@dimen/text_16sp" />
@@ -125,9 +106,7 @@
                 android:id="@+id/btn_menu_item_deposit_and_payment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 app:showArrowIcon="true"
                 app:subTitle="@string/text_change_cashbox"
                 app:title="@string/text_deposit_and_payment" />
@@ -136,8 +115,6 @@
                 android:id="@+id/btn_menu_item_history_deposits_payments"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 app:showArrowIcon="true"
                 app:title="@string/text_history_deposits_payments" />
 
@@ -145,9 +122,7 @@
                 android:id="@+id/btn_menu_item_fiscal_report"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_8dp"
-                android:layout_marginRight="@dimen/margin_16dp"
                 app:showArrowIcon="true"
                 app:subTitle="@string/text_period_report"
                 app:title="@string/text_fiscal_report" />
