--- a/ui/src/main/res/layout/detail_view.xml
+++ b/ui/src/main/res/layout/detail_view.xml
@@ -5,6 +5,7 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingStart="@dimen/margin_16dp"
     android:paddingEnd="@dimen/margin_16dp"
     tools:ignore="RtlSymmetry">
 
