--- a/sell/src/main/res/layout/product_category_header.xml
+++ b/sell/src/main/res/layout/product_category_header.xml
@@ -10,7 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/textWhite"
+        android:layout_marginStart="@dimen/margin_16dp"
         android:paddingVertical="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/margin_8dp"
         android:layout_marginBottom="@dimen/margin_8dp"
         android:textSize="@dimen/text_16sp"
         tools:text="Секция товаров 1:" />
