--- a/ui/src/main/res/layout/goods_view.xml
+++ b/ui/src/main/res/layout/goods_view.xml
@@ -5,6 +5,8 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/margin_8dp"
+    android:layout_marginEnd="@dimen/margin_8dp"
     tools:ignore="RtlSymmetry">
 
     <com.google.android.material.card.MaterialCardView
@@ -25,7 +27,7 @@
             android:paddingTop="@dimen/margin_12dp">
 
             <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/iv_detail_icon"
+                android:id="@+id/cb_select_item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_12dp"
@@ -40,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_14dp"
                 android:text="@string/text_product_name"
-                app:layout_constraintStart_toEndOf="@id/iv_detail_icon"
+                app:layout_constraintStart_toEndOf="@id/cb_select_item"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
