--- a/sell/src/main/res/layout/price_output_fragment.xml
+++ b/sell/src/main/res/layout/price_output_fragment.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.fragment.price_output.PriceOutputFragment">
 
     <TextView
+        style="@style/SmallLabelTextStyle"
         android:id="@+id/tv_position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
