--- a/app/src/main/res/layout/side_menu_main.xml
+++ b/app/src/main/res/layout/side_menu_main.xml
@@ -42,7 +42,8 @@
         android:layout_margin="@dimen/margin_16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/radius_4dp">
+        app:cardBackgroundColor="@color/darkGrey"
+        app:cardCornerRadius="@dimen/radius_10dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
