--- a/sell/src/main/res/layout/fragment_print_receipt.xml
+++ b/sell/src/main/res/layout/fragment_print_receipt.xml
@@ -48,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_32dp"
+        android:visibility="invisible"
         android:text="@string/change"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
