--- a/sell/src/main/res/layout/fragment_save_receipt.xml
+++ b/sell/src/main/res/layout/fragment_save_receipt.xml
@@ -234,6 +234,7 @@
         android:layout_width="@dimen/margin_0dp"
         android:layout_height="wrap_content"
         android:text="@string/print_check"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
