--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -35,6 +35,7 @@
     <dimen name="size_40dp">40dp</dimen>
     <dimen name="size_24dp">24dp</dimen>
     <dimen name="size_18dp">18dp</dimen>
+    <dimen name="size_4dp">4dp</dimen>
     <dimen name="size_0dp">0dp</dimen>
 
 </resources>
